--- a/Model_Training.ipynb
+++ b/Model_Training.ipynb
@@ -17,7 +17,7 @@
     "from torch.nn.functional import sigmoid, relu\n",
     "from scipy.cluster.hierarchy import dendrogram, linkage\n",
     "\n",
-    "seed = np.ra"
+    "seed = np.random.seed()"
    ]
   },
   {
