Update Trained Model

--- a/Model_Training.ipynb
+++ b/Model_Training.ipynb
@@ -523,15 +523,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save({'epoch' : n_epochs,\n",
-    "            'model_state_dict' : mynet.state_dict(),\n",
+    "torch.save({'epoch'               : n_epochs,\n",
+    "            'model_state_dict'    : mynet.state_dict(),\n",
     "            'optimizer_state_dict': optimizer.state_dict(),\n",
-    "            'losses' : err,\n",
-    "            'rep_layer' : rep_layer}, 'trained_model.pt')"
+    "            'losses' : errors,\n",
+    "            'rep_layer' : rep_layers},\n",
+    "           'trained_model.pt')"
    ]
   },
   {
